// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`steppedListCard > should hide the toggle button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: 100%; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="styles__11c7zuq0 styles__1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__x6hyh50"
          style="--_3mg8xe0: 1fr 3fr; --_3mg8xe1: 1fr 3fr; --_3mg8xe2: 1fr 3fr; --_3mg8xe3: 1fr 3fr; --_3mg8xe4: 1fr 3fr; --_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__11c7zuq1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_2rem_xxsmall__toi52u47 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <ul
              class="styles__1g1au380"
            >
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
                >
                  1
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_2__1jy42m0h"
                >
                  2
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__11c7zuq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <div
              class="styles__11c7zuq4"
            >
              <h3
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingSmallStrong__m4c9ow16 style_undefined_compound_0__m4c9ow1a"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__11c7zuq3"
            >
              <svg
                class="styles__w1ggld1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with custom hide action 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: 100%; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <h3
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_heading__m4c9ow11 style_undefined_compound_0__m4c9ow1a"
        >
          Header
        </h3>
        <button
          class="styles__11c7zuq7 styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="styles__11c7zuq0 styles__1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__x6hyh50"
          style="--_3mg8xe0: 1fr 3fr; --_3mg8xe1: 1fr 3fr; --_3mg8xe2: 1fr 3fr; --_3mg8xe3: 1fr 3fr; --_3mg8xe4: 1fr 3fr; --_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__11c7zuq1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_2rem_xxsmall__toi52u47 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <ul
              class="styles__1g1au380"
            >
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
                >
                  1
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_2__1jy42m0h"
                >
                  2
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__11c7zuq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <div
              class="styles__11c7zuq4"
            >
              <h1>
                First step
              </h1>
            </div>
            Description
            <div
              class="styles__11c7zuq3"
            >
              <svg
                class="styles__w1ggld1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: 100%; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <h1>
          Header
        </h1>
        <div
          aria-controls="_r_0_"
          aria-describedby="_r_0_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__11c7zuq7 styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
            type="button"
          >
            hide button
          </button>
        </div>
      </div>
      <div
        class="styles__11c7zuq0 styles__1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__x6hyh50"
          style="--_3mg8xe0: 1fr 3fr; --_3mg8xe1: 1fr 3fr; --_3mg8xe2: 1fr 3fr; --_3mg8xe3: 1fr 3fr; --_3mg8xe4: 1fr 3fr; --_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__11c7zuq1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_2rem_xxsmall__toi52u47 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <ul
              class="styles__1g1au380"
            >
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
                >
                  1
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_2__1jy42m0h"
                >
                  2
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__11c7zuq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <div
              class="styles__11c7zuq4"
            >
              <h3
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingSmallStrong__m4c9ow16 style_undefined_compound_0__m4c9ow1a"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__11c7zuq3"
            >
              <svg
                class="styles__w1ggld1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with pre-completed step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: 100%; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <h1>
          Header
        </h1>
        <button
          class="styles__11c7zuq7 styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="styles__11c7zuq0 styles__1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__x6hyh50"
          style="--_3mg8xe0: 1fr 3fr; --_3mg8xe1: 1fr 3fr; --_3mg8xe2: 1fr 3fr; --_3mg8xe3: 1fr 3fr; --_3mg8xe4: 1fr 3fr; --_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__11c7zuq1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_2rem_xxsmall__toi52u47 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <ul
              class="styles__1g1au380"
            >
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
                >
                  1
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_0__1jy42m0f"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      CheckIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
                    />
                  </svg>
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__11c7zuq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <div
              class="styles__11c7zuq4"
            >
              <h3
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingSmallStrong__m4c9ow16 style_undefined_compound_0__m4c9ow1a"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__11c7zuq3"
            >
              <svg
                class="styles__w1ggld1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with step icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: 100%; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="styles__11c7zuq0 styles__1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__x6hyh50"
          style="--_3mg8xe0: 1fr 3fr; --_3mg8xe1: 1fr 3fr; --_3mg8xe2: 1fr 3fr; --_3mg8xe3: 1fr 3fr; --_3mg8xe4: 1fr 3fr; --_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="styles__11c7zuq1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_2rem_xxsmall__toi52u47 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <ul
              class="styles__1g1au380"
            >
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      EscapeIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M8 7.333a.67.67 0 0 1-.667-.666.669.669 0 0 1 1.247-.334c.187.32.593.427.913.24a.666.666 0 0 0 .24-.913A2.01 2.01 0 0 0 8 4.66c-1.107 0-2 .893-2 2s.893 2 2 2c.367 0 .667.3.667.667a.669.669 0 0 1-1.247.333.666.666 0 0 0-.913-.24.666.666 0 0 0-.24.914c.346.593.993 1 1.733 1 1.107 0 2-.894 2-2 0-1.107-.893-2-2-2M4.667 6c.366 0 .666-.3.666-.667 0-.366-.3-.666-.666-.666H2v6.666h2.667c.366 0 .666-.3.666-.666S5.033 10 4.667 10H3.333V8.667h1.334c.366 0 .666-.3.666-.667s-.3-.667-.666-.667H3.333V6zm8.473 3.68c.18-.32.587-.44.907-.26v.007c.32.18.44.586.26.906a1.94 1.94 0 0 1-1.694 1.007c-1.1 0-1.946-.92-1.946-2V6.673c0-1.08.846-2 1.946-2 .74 0 1.367.414 1.694 1.007.18.32.06.727-.26.907a.67.67 0 0 1-.907-.26.6.6 0 0 0-.527-.327C12.3 6 12 6.273 12 6.667v2.68c.007.393.3.66.613.66.214 0 .414-.12.527-.327"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a"
                  >
                    step 1
                  </h3>
                </div>
              </li>
              <li
                class="styles__11c7zuq6 styles__1g1au381 styles_disabled_false__1g1au382"
              >
                <div
                  class="styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_2__1jy42m0h"
                >
                  2
                </div>
                <div
                  class="styles__1g1au384 styles_size_small__1g1au386"
                >
                  <h3
                    class="styles__11c7zuq5 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__11c7zuq2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
          >
            <div
              class="styles__11c7zuq4"
            >
              <h3
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_headingSmallStrong__m4c9ow16 style_undefined_compound_0__m4c9ow1a"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__11c7zuq3"
            >
              <svg
                class="styles__w1ggld1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
